refactor: accomodate tests to build correctly
When integrating google tests, some issues were
detected:

- missed source code.
- CMakeLists.txt with duplicated targets.
- Incomplete CMakeLists.txt
- Lack of consistency when naming the test targets.

Signed-off-by: Alejandro Visiedo <learning.little.engineer.2025.1@gmail.com>

--- a/tests/libs/libsomething/CMakeLists.txt
+++ b/tests/libs/libsomething/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_executable(test_main test_main.cpp)
-target_link_libraries(test_main gtest gtest_main)
+add_executable(lib_something_something_delegate_test something_delegate_test.cpp)
+target_link_libraries(lib_something_something_delegate_test gtest gtest_main)
 
