--- a/tests/app/my-app/CMakeLists.txt
+++ b/tests/app/my-app/CMakeLists.txt
@@ -1,4 +1,15 @@
 
-add_executable(test_main test_main.cpp)
-target_link_libraries(test_main gtest gtest_main)
+add_executable(
+    my_app_main_test
+    main_test.cpp
+)
+target_link_libraries(
+    my_app_main_test
+    gtest
+    gtest_main
+    # GTest::gtest_main
+)
+
+include(GoogleTest)
+# gtest_discover_tests(main_test)
 
