--- a/tests/app/my-tool/CMakeLists.txt
+++ b/tests/app/my-tool/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_executable(test_main test_main.cpp)
-target_link_libraries(test_main gtest gtest_main)
+add_executable(my_tool_main_test main_test.cpp)
+target_link_libraries(my_tool_main_test gtest gtest_main)
 
