--- a/tests/app/my-tool/CMakeLists.txt
+++ b/tests/app/my-tool/CMakeLists.txt
@@ -2,3 +2,6 @@
 add_executable(my_tool_main_test main_test.cpp)
 target_link_libraries(my_tool_main_test gtest gtest_main)
 
+include(GoogleTest)
+gtest_discover_tests(my_tool_main_test)
+
